# rust-skills

./: Cargo.toml  README.md
embedonomicon/: .env  notes.md  readme.md
embedonomicon/basic_main/: link.x
embedonomicon/basic_main/.cargo/: config.toml
embedonomicon/basic_main/src/: main.rs
embedonomicon/lm3s6965/: readme.md
embedonomicon/lm3s6965/app/: Cargo.toml  (+2 more)
embedonomicon/rp2040/: readme.md
esp32/: README.md
esp32/docs/: arduino_ide.md  rust_setup.md  ttgo_display.md  usb2ttl_driver.md
esp32/ttgo-display/: .env
esp32/ttgo-display/screen_color/: Cargo.toml
esp32/ttgo-display/screen_color/src/: main.rs
exercism/rust/: armstrong_numbers.rs  luhn.rs  matrix.rs  matrix_1.rs  nucleotide.rs  reverse_string.rs
grinder/: Cargo.toml  README.md  grinder_prompt.md
grinder/src/: lib.rs
in-action/loops/: 004_print_evens.rs  005_print_in_array.rs  006_fizz_buzz.rs  007_max_in_array.rs  008_reverse_string.rs  print_range_1_to_10.rc  print_string_chars.rs  sum_range_1_to_10.rs
pages/: 2d_vectors.md  btree_map.md  dbg_inspect.md  functional.md  hashmap.md  iterators.md  match.md  option.md  option_result.md  ownership.md  ranges.md  slices_and_references.md  strings.md  time.md  vectors.md
pico-blinky/: Cargo.toml  readme.md
pico-blinky/docs/: S64e78cda96574394b2dbcdb7d46ed0dbZ.avif  Saa227e2a35d44a1dbf3ad96faa2c0634I.avif
pico-blinky/src/: main.rs
roomer/: Cargo.toml
roomer/src/: lib.rs  main.rs
rp2040_promicro/: .gitignore  Cargo.toml  readme.md
rp2040_promicro/.cargo/: config.toml
rp2040_promicro/src/: main.rs
src/: main.rs
(+60 files in other folders)
